[package]
name = "tutorial-shooter"
version = "0.1.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"

[dependencies]

# Use specific version from GitHub, because engine changes rapidly and we must use specific version
# to make sure it compiles.
rg3d = { git = "https://github.com/rg3dengine/rg3d", rev = "a3c3d678c361aa72fc44c36f3e37adc20a54f311" }