[package]
name = "tutorial-shooter"
version = "0.1.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"

[dependencies]
# Use specific version from GitHub, because engine changes rapidly and we must use specific version
# to make sure it compiles.
rg3d = { git = "https://github.com/rg3dengine/rg3d", rev = "431c8dc16d75f7b8755a7ac6a7b43bd43fdcfca0" }